; ModuleID = '/home/carl/AnghaBench/darknet/examples/extr_darknet.c_operations.c'
source_filename = "/home/carl/AnghaBench/darknet/examples/extr_darknet.c_operations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gpu_index = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Floating Point Operations: %ld\0A\00", align 1
@.str.1 = private unnamed_addr constant [36 x i8] c"Floating Point Operations: %.2f Bn\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @operations(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  store i32 -1, i32* @gpu_index, align 4
  %5 = load i8*, i8** %2, align 8
  %6 = call i32* @parse_network_cfg(i8* %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @numops(i32* %7)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = sitofp i64 %9 to float
  %11 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), float %10)
  %12 = load i64, i64* %4, align 8
  %13 = sitofp i64 %12 to float
  %14 = fpext float %13 to double
  %15 = fdiv double %14, 1.000000e+09
  %16 = fptrunc double %15 to float
  %17 = call i32 @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0), float %16)
  ret void
}

declare dso_local i32* @parse_network_cfg(i8*) #1

declare dso_local i64 @numops(i32*) #1

declare dso_local i32 @printf(i8*, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
